Added services and repositories

--- a/TaskManagement/TaskManagement.API/appsettings.json
+++ b/TaskManagement/TaskManagement.API/appsettings.json
@@ -5,5 +5,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=TaskManagerDb;Trusted_Connection=True;"
+  },
+  "Jwt": {
+    "Key": "YOUR_SECRET_KEY_HERE_SHOULD_BE_LONG",
+    "Issuer": "TaskManagerAPI",
+    "Audience": "TaskManagerClient",
+    "ExpiryMinutes": 60
+  },
+  "Swagger": {
+    "Enabled": true
+  }
 }
