Added   unit testing, swagger documentation, and task apis

--- a/TaskManagement/TaskManagement.API/appsettings.json
+++ b/TaskManagement/TaskManagement.API/appsettings.json
@@ -7,13 +7,14 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=TaskManagerDb;Trusted_Connection=True;"
+    //"DefaultConnection": "Server=PAVAN;Initial Catalog=TaskManagement;MultipleActiveResultSets=True;TrustServerCertificate=True;",
+    "DefaultConnection": "Server=tcp:rpavank.database.windows.net;Initial Catalog=TaskManagement;User Id=pavan;Password=T67fg5@%[-=+)po90[]{}4526;MultipleActiveResultSets=True;TrustServerCertificate=True;Connect Timeout=30;"
   },
-  "Jwt": {
-    "Key": "YOUR_SECRET_KEY_HERE_SHOULD_BE_LONG",
-    "Issuer": "TaskManagerAPI",
-    "Audience": "TaskManagerClient",
-    "ExpiryMinutes": 60
+  "JWT": {
+    "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp1OH7Xzyr",
+    "ValidAudience": "http://localhost:8000",
+    "ValidIssuer": "http://localhost:8000",
+    "JWTExpiryDays": 7
   },
   "Swagger": {
     "Enabled": true
